[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/tnt_input_engine/remap/assets/joy_front.png" type="Texture" id=1]
[ext_resource path="res://addons/tnt_input_engine/remap/code/resizer.gd" type="Script" id=2]
[ext_resource path="res://addons/tnt_input_engine/remap/assets/joy_top.png" type="Texture" id=3]
[ext_resource path="res://addons/tnt_input_engine/remap/assets/Kenney Future Narrow.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/tnt_input_engine/remap/assets/joy_components.png" type="Texture" id=5]
[ext_resource path="res://addons/tnt_input_engine/remap/assets/arrow.png" type="Texture" id=6]
[ext_resource path="res://addons/tnt_input_engine/remap/code/mapper_ui.gd" type="Script" id=7]
[ext_resource path="res://addons/tnt_input_engine/remap/button.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3, 260, 69, 46 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2, 320, 71, 77 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 18, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 20, 52, 34, 52 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 105, 74, 74 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 22, 193, 50, 22 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 23, 225, 40, 28 )

[node name="Landscape" type="Node2D"]
script = ExtResource( 7 )

[node name="JoyMap" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoContainer" type="GridContainer" parent="JoyMap"]
margin_right = 754.0
margin_bottom = 561.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblInfo" type="Label" parent="JoyMap/infoContainer"]
margin_right = 238.0
margin_bottom = 228.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 8 )
text = " JOYPAD REMAPPING TOOL
PRESS A BUTTON ON 
JOYPAD AND IF BECOME
RED BUTTON IS WORKING
ELSE touch or click 

\"save mapping\" save map 
and apply new map.
\"reset mapping\" to
 revert default mapping.
\"close\" to close mapping."
align = 1
valign = 1

[node name="FrontJoy" type="TextureRect" parent="JoyMap/infoContainer"]
margin_left = 242.0
margin_right = 754.0
margin_bottom = 228.0
size_flags_horizontal = 11
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 6

[node name="L1" parent="JoyMap/infoContainer/FrontJoy" instance=ExtResource( 8 )]
position = Vector2( 74, 56 )
normal = SubResource( 11 )

[node name="R1" parent="JoyMap/infoContainer/FrontJoy" instance=ExtResource( 8 )]
position = Vector2( 371, 57 )
normal = SubResource( 11 )

[node name="L2" parent="JoyMap/infoContainer/FrontJoy" instance=ExtResource( 8 )]
position = Vector2( 72, 108 )
normal = SubResource( 12 )

[node name="R2" parent="JoyMap/infoContainer/FrontJoy" instance=ExtResource( 8 )]
position = Vector2( 370, 109 )
normal = SubResource( 12 )

[node name="btnContainer" type="VBoxContainer" parent="JoyMap/infoContainer"]
margin_left = 44.0
margin_top = 289.0
margin_right = 194.0
margin_bottom = 486.0
rect_min_size = Vector2( 130, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="btnSave" type="Button" parent="JoyMap/infoContainer/btnContainer"]
margin_right = 150.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 55 )
rect_pivot_offset = Vector2( 153.75, 31.0163 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 9 )
text = "Save mapping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnReset" type="Button" parent="JoyMap/infoContainer/btnContainer"]
margin_top = 59.0
margin_right = 150.0
margin_bottom = 114.0
rect_min_size = Vector2( 150, 55 )
rect_pivot_offset = Vector2( 153.75, 31.0163 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 9 )
text = "reset Mapping"

[node name="Label_Space" type="Label" parent="JoyMap/infoContainer/btnContainer"]
margin_top = 118.0
margin_right = 150.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 20 )

[node name="btnClose" type="Button" parent="JoyMap/infoContainer/btnContainer"]
margin_top = 142.0
margin_right = 150.0
margin_bottom = 197.0
rect_min_size = Vector2( 150, 55 )
custom_fonts/font = SubResource( 10 )
text = "Close"

[node name="TopJoy" type="TextureRect" parent="JoyMap/infoContainer"]
margin_left = 242.0
margin_top = 232.0
margin_right = 754.0
margin_bottom = 543.0
size_flags_horizontal = 11
size_flags_vertical = 11
texture = ExtResource( 3 )
stretch_mode = 6

[node name="A" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 425, 98 )
normal = SubResource( 13 )

[node name="X" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 386, 95 )
rotation = -1.5708
normal = SubResource( 13 )

[node name="Y" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 384, 134 )
rotation = -3.14159
normal = SubResource( 13 )

[node name="B" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 423, 136 )
rotation = 1.5708
normal = SubResource( 13 )

[node name="L" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 101, 99 )
rotation = 1.5708
normal = SubResource( 14 )

[node name="R" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 114, 133 )
rotation = -1.5708
normal = SubResource( 14 )

[node name="U" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 124, 110 )
rotation = -3.14159
normal = SubResource( 14 )

[node name="D" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 91, 122 )
normal = SubResource( 14 )

[node name="LEFT_STICK" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 218, 225 )
rotation = -3.14159
normal = SubResource( 15 )
button_type = 1

[node name="RIGHT_STICK" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 368, 225 )
rotation = -3.14159
normal = SubResource( 15 )
button_type = 1

[node name="SELECT" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 196, 107 )
normal = SubResource( 16 )

[node name="START" parent="JoyMap/infoContainer/TopJoy" instance=ExtResource( 8 )]
position = Vector2( 287, 106 )
normal = SubResource( 17 )

[node name="LUP" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 181, 162 )
texture = ExtResource( 6 )

[node name="LDOWN" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 181, 215 )
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )

[node name="LLEFT" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 153, 189 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="LRIGHT" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 208, 189 )
rotation = 1.5708
texture = ExtResource( 6 )

[node name="RUP" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 332, 162 )
texture = ExtResource( 6 )

[node name="RDOWN" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 332, 215 )
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )

[node name="RLEFT" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 304, 189 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="RRIGHT" type="Sprite" parent="JoyMap/infoContainer/TopJoy"]
visible = false
position = Vector2( 359, 189 )
rotation = 1.5708
texture = ExtResource( 6 )

[node name="lblDevice" type="Label" parent="JoyMap/infoContainer"]
margin_top = 547.0
margin_right = 238.0
margin_bottom = 561.0
align = 2

[node name="lblGUID" type="Label" parent="JoyMap/infoContainer"]
modulate = Color( 0.941176, 0.87451, 0.0901961, 1 )
margin_left = 242.0
margin_top = 547.0
margin_right = 754.0
margin_bottom = 561.0
align = 1
valign = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -70.0
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Mapping not saved..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationDialog/MarginContainer"]
margin_top = 15.0
margin_right = 384.0
margin_bottom = 80.0
text = "Are you sure that you want to close mapping?
Current map was not saved!

CLOSE ANYWAY? (if you close lost crrent map!)"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="JoyMap/infoContainer/btnContainer/btnSave" to="JoyMap" method="_on_btnSave_pressed"]
[connection signal="pressed" from="JoyMap/infoContainer/btnContainer/btnReset" to="JoyMap" method="_on_btnReset_pressed"]
[connection signal="pressed" from="JoyMap/infoContainer/btnContainer/btnClose" to="JoyMap" method="_on_btnClose_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
